[gd_scene load_steps=2 format=3 uid="uid://cbvbmvnphyjcc"]

[ext_resource type="Script" path="res://components/upgrades/upgrade_buttons/pistol_buttons/pistol_reload_speed/pistol_reload_speed.gd" id="2_wwp0h"]

[node name="pistol_reload_speed" type="Button"]
custom_minimum_size = Vector2(150, 0)
anchors_preset = -1
anchor_right = 0.130208
anchor_bottom = 0.308642
text = "|Pistol|
Increase
Reload Speed"
script = ExtResource("2_wwp0h")
metadata/_edit_use_anchors_ = true

[node name="level_1" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -24.0
grow_vertical = 0
focus_mode = 0

[node name="level_2" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -43.0
offset_bottom = -19.0
grow_vertical = 0
focus_mode = 0

[node name="level_3" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -63.0
offset_bottom = -39.0
grow_vertical = 0
focus_mode = 0

[node name="level_4" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -83.0
offset_bottom = -59.0
grow_vertical = 0
focus_mode = 0

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
